--- a/style.css
+++ b/style.css
@@ -19,7 +19,10 @@
         padding-top: 5%;
         display:flex;
         justify-content: center;
-        margin-left: 19%;
+        align-content: center;
+        align-items: center;
+        justify-items: center;
+    
     }
 
 
