--- a/style.css
+++ b/style.css
@@ -15,34 +15,34 @@
     font-size: 40px;
     color: #434343;
 }
-.search-box {
-        padding-top: 5%;
-        display:flex;
-        justify-content: center;
-        align-content: center;
-        align-items: center;
-        justify-items: center;
-    }
 
 
-
-    .search-box input[type="text"]{
-        border: none;
-        outline: none;
-        letter-spacing: 5px;
-        height: 40px;
-        width: 350px;
-        font-size: 20px;
-        border-top-left-radius: 5px;
-        border-bottom-left-radius: 5px;
-        border-top-right-radius: 5px;
-        border-bottom-right-radius: 5px;
-        background-color: rgb(255, 255, 255);
-        display:flex;
-        justify-content: center;
-        text-align:center;
-    }
-
+  #searchbar{
+     margin-left: 15%;
+     padding:15px;
+     border-radius: 10px;
+   }
+ 
+   input[type=text] {
+      width: 30%;
+      -webkit-transition: width 0.15s ease-in-out;
+      transition: width 0.15s ease-in-out;
+   }
+ 
+   /* When the input field gets focus,
+        change its width to 100% */
+   input[type=text]:focus {
+     width: 70%;
+   }
+ 
+  #list{
+    font-size:  1.5em;
+    margin-left: 90px;
+   }
+ 
+.animals{
+   display: list-item;    
+  } 
 .title3 {
     display: flex;
     justify-content: right;
