--- a/style.css
+++ b/style.css
@@ -14,17 +14,19 @@
 }
 
 ol li{
-  list-style: none;
+  list-style-type:none
 }
 
 .iwantamargin {
     margin-left: 50%;
     list-style-type: none;
+    list-style: none;
 }
 
 #list {
    margin-left: 15%; 
    list-style-type: none;
+   list-style: none;
 }
 
 .title2 {
