--- a/style.css
+++ b/style.css
@@ -147,8 +147,8 @@ body {
 
 .dropdown_2 {
     float: left;
-    margin-top: -20px;
-    margin-left: 400px;
+    margin-top: -'0px;
+    margin-left: 500px;
     overflow: hidden;
   }
 
