--- a/style.css
+++ b/style.css
@@ -147,7 +147,7 @@ body {
 
 .dropdown_2 {
     float: left;
-    margin-top: -'0px;
+    margin-top: -40px;
     margin-left: 500px;
     overflow: hidden;
   }
